# easy_budget

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build-ci-wine.yml  build-ci.yml
accounttool/: CMakeLists.txt  accountmgr.cpp  appconfig.cpp  appconfig.h  appsetting.cpp  appsetting.h  comboboxdelegate.cpp  comboboxdelegate.h  delegatefilteritem.cpp  delegatefilteritem.h  delegatemergeitem.cpp  delegatemergeitem.h  dlgnewop.cpp  dlgnewop.h  dlgnewop.ui  dlgnewstate.cpp  dlgnewstate.h  dlgnewstate.ui  dlgupdateitemoptions.cpp  dlgupdateitemoptions.h  dlgupdateitemoptions.ui  editopdelegate.cpp  editopdelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelitems.cpp  modelitems.h  modelmergelist.cpp  modelmergelist.h  modeloplist.cpp  modeloplist.h  modeloplistproxy.cpp  modeloplistproxy.h  panelitems.cpp  panelitems.h  panelitems.ui  panelreleve.cpp  panelreleve.h  (+7 more)
accounttool/i18n/: account_fr.ts
accounttooldata/: AccountToolData_global.h  CMakeLists.txt  accountmerger.cpp  accountmerger.h  accountmgr.cpp  accountmgr.h  accountsynthesis.cpp  accountsynthesis.h  accounttooldata.cpp  accounttooldata.h  budgetitem.cpp  budgetitem.h  dataaccount.h  dataaccountfile.cpp  dataaccountfile.h  istatefile.h  operation.cpp  operation.h  period.cpp  period.h  statefilece.cpp  statefilece.h  statefilefactory.cpp  statefilefactory.h  statefileofx.cpp  statefileofx.h  statement.cpp  statement.h  statepos.cpp  statepos.h
accounttooldata/i18n/: accountdata_fr.ts
help/: CMakeLists.txt  easybudget.qhcp  easybudget.qhp  help-gen.html  help-import-releve.html  help-vue-categories.html  help-vue-releves.html  help-vue-synthese.html
licenses/: license-GPL-V3.txt  thridpartysoftware_listing.txt
scripts/: build_ubuntu.sh  build_wine.bat
setup/: cpack_config.cmake  cpack_generator.cmake  install-help.cmake  install-qt.cmake  install.cmake
setup/config/: config.xml
